--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MYSQLHOST=localhost
-MYSQLPORT=3306
-MYSQLUSER=root
-MYSQLPASSWORD=admin
-MYSQLDATABASE=db_exemplo
+MYSQLHOST=ftp://195.200.3.233
+MYSQLPORT=21
+MYSQLUSER=u483163563.tftv.io
+MYSQLPASSWORD=L1i0b9e9@@@@
+MYSQLDATABASE=u483163563_tf
